--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 </nav>
 
-<div id="home">
+<div>
   <h1>JOHN DOE</h1>
   <p>Software Development</p>
 
@@ -32,7 +32,7 @@
 </div>
 
 <!-- Container (About Section) -->
-<div id="about" class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <div>
       <h2>About Me</h2><br>
@@ -46,8 +46,8 @@
 </div>
 
 
-<!-- Container (Services Section) -->
-<div id="services" class="container-fluid text-center">
+<!-- Container (Skills Section) -->
+<div class="container-fluid text-center">
   <h2>SKILLS</h2>
   <h4>What I can do for you</h4>
   <br>
@@ -61,7 +61,7 @@
 </div>
 
 <!-- Container (Portfolio Section) -->
-<div id="portfolio" class="container-fluid text-center">
+<div class="container-fluid text-center">
   <h2>Portfolio</h2><br>
   <h4>What I've Done</h4>
   <div class="row text-center slideanim">
